<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_1sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:gravity="center"
        android:background="@drawable/cell_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ambil_gambar_label"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <ImageButton
                android:id="@+id/btn_close_gambar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ikon_close" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_kamera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/kamera_label"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_galeri"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/galeri_label"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>